name:                marquee
version:             0.1.0.0
synopsis:            Markdown transpiler
-- description:
homepage:            https://github.com/danielrs/marquee#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Rivas
maintainer:          ers.daniel+dev@gmail.com
copyright:           Copyright: (c) 2016 Daniel Rivas
category:            transpiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , Data.List.Marquee
                       , Data.Text.Marquee
                       , Text.Marquee
                       , Text.Marquee.Parser
                       , Text.Marquee.Parser.Block
                       , Text.Marquee.Parser.Common
                       , Text.Marquee.Parser.HTML
                       , Text.Marquee.Parser.Inline
                       , Text.Marquee.SyntaxTrees.AST
                       , Text.Marquee.SyntaxTrees.CST
                       , Text.Marquee.Writers.HTML

  build-depends:       base >= 4.7 && < 5
                       , text >= 1.2.2.1
                       , containers >= 0.5.7.1
                       , attoparsec >= 0.13.1.0
                       , blaze-html >= 0.8.1.3
                       , mtl >= 2.2.1

  default-language:    Haskell2010

executable marquee-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , marquee
                     , text >= 1.2.2.1
                     , optparse-applicative >= 0.13.1.0

  default-language:    Haskell2010

executable minimal-exe
  hs-source-dirs:      app
  main-is:             Minimal.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , marquee
                     , text >= 1.2.2.1

  default-language:    Haskell2010
test-suite marquee-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , marquee
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danielrs/marquee
